Fix author description text for consistency

--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@ footer .footer-title {
     <p class="author-name">Walter K. Zell</p>
     <p class="author-role">Architect</p>
     <div class="author-text">
-      <p>Walter K. Zell was a Southern California architect known for his mid-century modern residential designs. His work in the Flintridge Hills of La Ca&ntilde;ada featured geometric lines, expansive glass panels, clerestory windows, and the seamless indoor-outdoor living that defines the best of mid-century California architecture.</p>
+      <p>Walter K. Zell is a Southern California architect known for his mid-century modern residential designs. His work in the Flintridge Hills of La Ca&ntilde;ada featured geometric lines, expansive glass panels, clerestory windows, and the seamless indoor-outdoor living that defines the best of mid-century California architecture.</p>
       <p>With "Be Your Own Furniture Maker," he brought the same design philosophy&mdash;clean lines, economical materials, functional beauty&mdash;to affordable home furniture that anyone could build.</p>
     </div>
     <a class="author-link" href="https://medium.com/dilbeckinsights/the-mid-century-modern-roundup-af0305573e76" target="_blank" rel="noopener">Read the Press Feature &rarr;</a>
